--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Lab 9</title>
+    <title>Jett's Site!</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <h1>Lab 9</h1>
+    <h1>Jett Girard</h1>
     <header>
     <nav>
         <a href="#"><img src="images/logo.png" alt="logo" id="logo"></a>
         <ul>
             <li><a href="html/jett.html">Jett</a></li>
-            <li><a href="html/nik.html">Nik</a></li>
         </ul>
     </nav>
     </header>
@@ -24,4 +23,5 @@
 
     
 </body>
+
 </html>
