jett page title changed

--- a/html/jett.html
+++ b/html/jett.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Lab 9</title>
+    <title>Jett's Site!</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/nav.css">
 </head>
 <body>
-    <h1>Lab 9</h1>
+    <h1>Jett Girard Page 1</h1>
     <header>
     <nav>
         <a href="../index.html"><img src="../images/logo.png" alt="logo" id="logo"></a>
