--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <h1 id="home">Home</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus odio dolores, quas veniam omnis error dignissimos iure accusamus consequatur repellendus?</p>
+    <p>Hannah stinks hahahaha you can't do anything cuz FREE SPEECH</p>
     <img src="images/homepagephoto.jpg" alt="photo of a river">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi consectetur sed temporibus minima earum ea. Atque quidem error nisi a architecto libero quisquam perferendis eius pariatur? Repellendus sunt, iste ipsam architecto voluptatum, quos doloribus temporibus obcaecati quasi facilis, odio inventore iusto. Nobis, neque? Soluta, in. Quasi iure tenetur adipisci aliquam?</p>
 
@@ -25,3 +25,4 @@
 </body>
 
 </html>
+
