--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <h1>Jett Girard</h1>
+    <h1>Jett's Website </h1>
     <header>
     <nav>
         <a href="#"><img src="images/logo.png" alt="logo" id="logo"></a>
@@ -17,12 +17,13 @@
     </header>
 
     <h1 id="home">Home</h1>
-    <p>Hannah stinks hahahaha you can't do anything cuz FREE SPEECH</p>
-    <img src="images/homepagephoto.jpg" alt="photo of a river">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi consectetur sed temporibus minima earum ea. Atque quidem error nisi a architecto libero quisquam perferendis eius pariatur? Repellendus sunt, iste ipsam architecto voluptatum, quos doloribus temporibus obcaecati quasi facilis, odio inventore iusto. Nobis, neque? Soluta, in. Quasi iure tenetur adipisci aliquam?</p>
+    <p>Welcome to my website yo</p>
+    <img src="images/homepagephoto.jpg" alt="if it doesn't show up pretend this is a dope photo of a river">
+    <p>Here is some filler text: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi consectetur sed temporibus minima earum ea. Atque quidem error nisi a architecto libero quisquam perferendis eius pariatur? Repellendus sunt, iste ipsam architecto voluptatum, quos doloribus temporibus obcaecati quasi facilis, odio inventore iusto. Nobis, neque? Soluta, in. Quasi iure tenetur adipisci aliquam?</p>
 
     
 </body>
 
 </html>
+
 
