--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h1 id="home">Home</h1>
     <p>Welcome to my website yo</p>
-    <p>Message of the Day: Hannah Stinks</p>
+    <p>Message of the Day: Hannah is cool i guess</p>
     <img src="images/homepagephoto.jpg" alt="if it doesn't show up pretend this is a dope photo of a river">
     <p>Here is some filler text: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi consectetur sed temporibus minima earum ea. Atque quidem error nisi a architecto libero quisquam perferendis eius pariatur? Repellendus sunt, iste ipsam architecto voluptatum, quos doloribus temporibus obcaecati quasi facilis, odio inventore iusto. Nobis, neque? Soluta, in. Quasi iure tenetur adipisci aliquam?</p>
 
