--- a/html/jett.html
+++ b/html/jett.html
@@ -12,7 +12,7 @@
         <a href="../index.html"><img src="../images/logo.png" alt="logo" id="logo"></a>
         <ul>
             <li><a class="active"  href="#">Jett</a></li>
-             <li><a href="#">About Me</a></li>
+             <li><a href="./aboutme.html">About Me</a></li>
         </ul>
     </nav>
     </header>
