--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#"><img src="images/logo.png" alt="logo" id="logo"></a>
         <ul>
             <li><a href="html/jett.html">Jett</a></li>
-            <li><a href="html/jett.html">About Me</a></li>
+            <li><a href="html/aboutme.html">About Me</a></li>
         </ul>
     </nav>
     </header>
