trying out progress bar for Kat

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <section id="relationship-progress" style="text-align:center; margin-top:40px;">
     <h2>Days Until I See Kat Again </h2>
-    <p>Last seen: <span id="lastDateDisplay"></span></p>
-    <p>Next visit: <span id="nextDateDisplay"></span></p>
+    <p>I last saw my beautiful girlfriend on: <span id="lastDateDisplay"></span></p>
+    <p>The next time I will be graced by her radiance is: <span id="nextDateDisplay"></span></p>
 
     <div style="width:80%; max-width:400px; margin:20px auto; background:#ddd; border-radius:10px; overflow:hidden;">
         <div id="progressBar" style="height:30px; background:#ff66b2; width:0%; transition:width 1s;"></div>
@@ -38,8 +38,8 @@
 
 <script>
   // === CONFIGURABLE VARIABLES ===
-  const lastSeen = new Date("2025-10-10");  // <-- change this to the last time you saw her
-  const nextVisit = new Date("2025-11-12"); // <-- change this to when you’ll see her next
+  const lastSeen = new Date("2025-10-19");  // <-- change this to the last time you saw her
+  const nextVisit = new Date("2025-12-13"); // <-- change this to when you’ll see her next
 
   // === CALCULATIONS ===
   const today = new Date();
