changed message of the day 10/27

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Jett's Site!</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="icon" type="image/png" href="/images/tinylogo.png">
 </head>
 <body>
     <h1>Jett's Website </h1>
@@ -19,7 +20,7 @@
 
     <h1 id="home">Home</h1>
     <p>Welcome to my website yo</p>
-    <p>Message of the Day for <span id="todayDateDisplay"></span>: You are deserving of love</p>
+    <p>Message of the Day for <span id="todayDateDisplay"></span>: Happy National Chocolate Day! </p>
     <img src="images/homepagephoto.jpg" alt="if it doesn't show up pretend this is a dope photo of a river">
     <p>Here is some filler text: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi consectetur sed temporibus minima earum ea. Atque quidem error nisi a architecto libero quisquam perferendis eius pariatur? Repellendus sunt, iste ipsam architecto voluptatum, quos doloribus temporibus obcaecati quasi facilis, odio inventore iusto. Nobis, neque? Soluta, in. Quasi iure tenetur adipisci aliquam?</p>
 
